--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p>Just a digital artifact.</p>
 
   <div class="links" style="margin-top:32px">
-    <a href="#" id="pump">pump.fun launch link</a>
+    <a href="https://pump.fun/coin/2sJYnBQFaqE7QzDCk7XSfUXJAB9ywZT5PYMn3zkFEBCf" id="pump">BGN on pump.fun</a>
     <a href="#" id="explorer">contract / explorer link</a>
   </div>
 
