--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   <p>Just a digital artifact.</p>
 
   <div class="links" style="margin-top:32px">
-    <a href="https://pump.fun/coin/2sJYnBQFaqE7QzDCk7XSfUXJAB9ywZT5PYMn3zkFEBCf" id="pump">BGN on pump.fun</a>
-    <a href="#" id="explorer">contract / explorer link</a>
-  </div>
+  <a href="https://pump.fun/coin/2sJYnBQFaqE7QzDCk7XSfUXJAB9ywZT5PYMn3zkFEBCf" id="pump">BGN on pump.fun</a>
+  <a href="https://x.com/bgntoken" id="twitter">BGN on X (Twitter)</a>
+  <a href="#" id="explorer">contract / explorer link</a>
+</div>
+
 
   <footer>
     <p>BGN — recorded on-chain as a cultural timestamp.</p>
