--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@ setInterval(()=>{
 },1000);
 </script>
 
+  <p style="margin-top:.25rem;font-size:.95rem;color:var(--muted);">
+  Дни до политически наложеното въвеждане на еврото.
+</p>
+
+
   
 
   <footer>
