--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ setInterval(()=>{
   Дни до политически наложеното въвеждане на еврото.
 </p>
 
-
+  <p style="margin-top:.2rem;font-size:1rem;color:var(--muted);font-weight:600;">
+  Еврото го налагат. Но левът ще остане в блокчейна.
+</p>
   
 
   <footer>
