--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ setInterval(()=>{
   <p style="margin-top:.2rem;font-size:1rem;color:var(--muted);font-weight:600;">
   Еврото го налагат. Но левът ще остане в блокчейна.
 </p>
+
+  <p style="margin-top:.2rem;font-size:.85rem;color:var(--muted);letter-spacing:1px;">
+  BGN-CHAIN-001
+</p>
+
   
 
   <footer>
