--- a/index.html
+++ b/index.html
@@ -61,6 +61,23 @@ setInterval(()=>{
   BGN-CHAIN-001
 </p>
 
+  <p id="usdprice" style="margin-top:1rem;font-size:1.1rem;font-weight:600;"></p>
+
+<script>
+async function loadBGNUSD(){
+  try{
+    const r = await fetch("https://api.exchangerate.host/latest?base=BGN&symbols=USD");
+    const j = await r.json();
+    const rate = j.rates.USD;
+    document.getElementById("usdprice").innerText = `1 BGN = ${rate.toFixed(4)} USD`;
+  }catch(e){
+    document.getElementById("usdprice").innerText = "USD rate unavailable right now";
+  }
+}
+loadBGNUSD();
+setInterval(loadBGNUSD, 60000); // refresh cada 1 minuto
+</script>
+
   
 
   <footer>
