--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BGN Token — Digital memorial of the Bulgarian Lev</title>
+  <title>BGN Token — Bulgarian Lev Legacy before Euro 2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="BGN token — a minimal digital memorial to the Bulgarian Lev before its replacement by the Euro in January 2026.">
+  <meta name="description" content="Preserving the Bulgarian Lev (BGN) before its politically imposed transition to the Euro in 2026. A cultural and monetary timestamp archived on the blockchain.">
+  <meta name="keywords" content="BGN,Bulgarian Lev,Euro 2026,BGN token,blockchain,Bulgaria currency history">
   <link rel="canonical" href="https://bgntoken.com/">
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#fff;color:#111;margin:0;padding:48px;font-size:18px;line-height:1.45;max-width:720px}
