--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Preserving the Bulgarian Lev (BGN) before its politically imposed transition to the Euro in 2026. A cultural and monetary timestamp archived on the blockchain.">
   <meta name="keywords" content="BGN,Bulgarian Lev,Euro 2026,BGN token,blockchain,Bulgaria currency history">
+  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "BGN Token — Bulgarian Lev Legacy before Euro 2026",
+  "inLanguage": "en",
+  "about": "Preserving the Bulgarian Lev (BGN) before its politically imposed transition to the Euro in 2026.",
+  "keywords": "BGN,Bulgarian Lev,Euro 2026,BGN token,blockchain,Bulgaria currency history",
+  "description": "A cultural and monetary timestamp archived on the blockchain documenting the final era of the BGN.",
+  "url": "https://www.bgntoken.com/"
+}
+</script>
+
+  
   <link rel="canonical" href="https://bgntoken.com/">
   <style>
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#fff;color:#111;margin:0;padding:48px;font-size:18px;line-height:1.45;max-width:720px}
@@ -29,7 +44,7 @@
   <a href="#" id="explorer">contract / explorer link</a>
 </div>
 
-  <p class="lead">Recording the last moments…
+  <p class="lead">Recording the last moments…</p>
   <div id="timer" style="margin-top:1.5rem;font-size:1.6rem;font-weight:600;"></div>
 
 <script>
