--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
   
   <link rel="canonical" href="https://bgntoken.com/">
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#fff;color:#111;margin:0;padding:48px;font-size:18px;line-height:1.45;max-width:720px}
-    h1{margin:0 0 24px 0;font-size:28px;font-weight:600}
-    a{color:inherit}
-    .links a{display:block;margin:8px 0;padding:6px 0;text-decoration:none;border-bottom:1px solid #000;max-width:340px}
-    footer{margin-top:48px;font-size:13px;color:#555}
-  </style>
+  :root { --muted:#666; }
+  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#fff;color:#111;margin:0;padding:48px;font-size:18px;line-height:1.45;max-width:720px}
+  h1{margin:0 0 24px 0;font-size:28px;font-weight:600}
+  a{color:inherit}
+  .links a{display:block;margin:8px 0;padding:6px 0;text-decoration:none;border-bottom:1px solid #000;max-width:340px}
+  footer{margin-top:48px;font-size:13px;color:#555}
+</style>
+
 </head>
 
 <body>
