--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@ setInterval(loadBGNBTC, 60000);
 
   
 
-  <footer>
-    <p>BGN — recorded on-chain as a cultural timestamp.</p>
-  </footer>
+<footer>
+  <p>BGN — recorded on-chain as a cultural timestamp.</p>
+  <p>Левът остава.</p>
+</footer>
+
 </body>
 </html>
